ポートフォリオサイトの開発を進めました

--- a/index.html
+++ b/index.html
@@ -2,14 +2,132 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <title>about_me</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--google font-->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
+    <!--google font-->
+
+
+    <link rel="stylesheet" href="css/style.css"/>
     <title>My Portfolio</title>
   </head>
+
   <body>
-    <h1>ポートフォリオサイト</h1>
+    <div id="home" class="big-bg">
+      <header class="page-header">
+          <h1>Take</h1>
+          <nav>
+            <ul class="main-nav">
+              <li class="menu"><a href="#Background">Basic Information</a></li>
+              <li class="menu"><a href="#Basic-infomation">Background</a></li>
+              <li class="menu"><a href="#Favorite-thing">Favorite things</a></li>
+            </ul>
+          </nav>
+      </header>
+      <div class="home-content"></div>
+    </div>
+
+    <section>
+      <div class="titlespace">
+        <h1 id="Basic-infomation">Basic Information</h1>
+      </div>
+      <div id="basic_fadein" class="fadein-before divspace">
+        <div class="basic_l_and_a">
+          <p class="basic_label">Name</p>
+          <p class="basic_anser">たけ</p>
+        </div>
+        <div class="basic_l_and_a">
+          <p class="basic_label">age</p>
+          <p class="basic_anser">23</p>
+        </div>
+        <div class="basic_l_and_a">
+          <p class="basic_label">blood type</p>
+          <p class="basic_anser">B</p>
+        </div>
+        <div class="basic_l_and_a">
+          <p class="basic_label">hometown</p>
+          <p class="basic_anser">名古屋</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="titlespace_other">
+        <h1 id="Background">Background</h1>
+      </div>
+      <!-- <div id="background_fadein_right" class="fadein-before"> -->
+      <!-- </div> -->
+      <div id="background_fadein" class="fadein-before divspace">
+        <div class="basic_l_and_a_2">
+          <p class="basic_label">graduate school</p>
+          <p class="basic_anser">名古屋大学</p>
+        </div>
+        <div class="basic_l_and_a_2">
+          <p class="basic_label">department</p>
+          <p class="basic_anser">生命農学研究科</p>
+        </div>
+        <div class="basic_l_and_a_2">
+          <p class="basic_label">my study</p>
+          <p class="basic_anser">植物の体内時計</p>
+        </div>
+        <div class="plant">
+          <img src="../images/plant_circle.jpg" alt="植物"/>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="titlespace_other">
+        <h1 id="Favorite-thing">Favorite things</h1>
+      </div>
+      <div id="favorite_fadein" class="fadein-before divspace">
+        <div class="Lifting">
+          <img src="./images/Lifting-stop.png" alt="リフティングストップ" id="Liftingstop">
+          <img src="../gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
+        </div>
+        <!-- <button id="start-button">スタート</button>
+        <button id="stop-button">ストップ</button> -->
+        <div class="basic_l_and_a_3">
+            <p class="basic_label">spring & autumn</p>
+            <p class="basic_anser">リフディング</p>
+        </div>
+        <div class="basic_l_and_a_3">
+            <p class="basic_label">winter</p>
+            <p class="basic_anser">スノーボード</p>
+        </div>
+        <div class="basic_l_and_a_3">
+            <p class="basic_label">all season</p>
+            <p class="basic_anser">アニメ鑑賞</p>
+        </div>
+      </div>
+    <section>
+
+    <footer>
+      <div class="FFF">
+        <a href="https://www.instagram.com/nomu1524/" target="_blank" >
+          <img src="../images/glyph-logo_May2016.png" alt="ハリネズミ秋のお散歩" class="icon">
+        </a>
+        <!-- アンカーで囲ったものがリンクになる target="_blank" は別ページで開く用-->
+      </div>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
+
+<!-- 
+紹介したcssのキーワード
+
+・margin,padding　余白に関するもの
+・ブロックレベル要素と、インライン要素(HTML要素の種類)
+・flexbox　html要素の位置をいじれる、レイアウト
+・position: 　通常と違う挙動を指定する -->
