ポートフォリを作成を進めました

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>about_me</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -23,7 +22,7 @@
   </head>
 
   <body>
-    <div id="home" class="big-bg">
+  <div id="home" class="big-bg"><!--フルスクリーンの画像はcssでしてい-->
       <header class="page-header">
           <h1>Take</h1>
           <nav>
@@ -95,8 +94,6 @@
           <img src="./images/Lifting-stop.png" alt="リフティングストップ" id="Liftingstop">
           <img src="../gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
         </div>
-        <!-- <button id="start-button">スタート</button>
-        <button id="stop-button">ストップ</button> -->
         <div class="basic_l_and_a_3">
             <p class="basic_label">spring & autumn</p>
             <p class="basic_anser">リフディング</p>
@@ -115,7 +112,7 @@
     <footer>
       <div class="FFF">
         <a href="https://www.instagram.com/nomu1524/" target="_blank" >
-          <img src="../images/glyph-logo_May2016.png" alt="ハリネズミ秋のお散歩" class="icon">
+          <img src="../images/glyph-logo_May2016.png" alt="インスタロゴ" class="icon">
         </a>
         <!-- アンカーで囲ったものがリンクになる target="_blank" は別ページで開く用-->
       </div>
