--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
     <!--google font-->
 
-
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="https://take257.github.io/css/style.css"/>
+    <!-- <link rel="stylesheet" href="css/style.css"/> -->
     <title>My Portfolio</title>
   </head>
 
