ポートフォリオ

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <!--google font-->
 
     <!-- <link rel="stylesheet" href="https://take257.github.io/css/style.css"/> -->
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <title>My Portfolio</title>
   </head>
+  
 
   <body>
   <div id="home" class="big-bg"><!--フルスクリーンの画像はcssでしてい-->
