ポートフォリオ

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <p class="basic_anser">植物の体内時計</p>
         </div>
         <div class="plant">
-          <img src="../images/plant_circle.jpg" alt="植物"/>
+          <img src="./images/plant_circle.jpg" alt="植物"/>
         </div>
       </div>
     </section>
@@ -93,7 +93,7 @@
       <div id="favorite_fadein" class="fadein-before divspace">
         <div class="Lifting">
           <img src="./images/Lifting-stop.png" alt="リフティングストップ" id="Liftingstop">
-          <img src="../gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
+          <img src="./gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
         </div>
         <div class="basic_l_and_a_3">
             <p class="basic_label">spring & autumn</p>
@@ -113,7 +113,7 @@
     <footer>
       <div class="FFF">
         <a href="https://www.instagram.com/nomu1524/" target="_blank" >
-          <img src="../images/glyph-logo_May2016.png" alt="インスタロゴ" class="icon">
+          <img src="./images/glyph-logo_May2016.png" alt="インスタロゴ" class="icon">
         </a>
         <!-- アンカーで囲ったものがリンクになる target="_blank" は別ページで開く用-->
       </div>
