ポートフォリオ作成を進めました

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--google font-->
+
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,16 +14,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
-    <!--google font-->
+    
 
-    <!-- <link rel="stylesheet" href="https://take257.github.io/css/style.css"/> -->
     <link rel="stylesheet" href="style.css"/>
     <title>My Portfolio</title>
   </head>
   
 
   <body>
-  <div id="home" class="big-bg"><!--フルスクリーンの画像はcssでしてい-->
+  <div id="home" class="big-bg">
       <header class="page-header">
           <h1>Take</h1>
           <nav>
@@ -42,22 +41,21 @@
         <h1 id="Basic-infomation">Basic Information</h1>
       </div>
       <div id="basic_fadein" class="fadein-before divspace">
-        <div class="basic_l_and_a">
-          <p class="basic_label">Name</p>
-          <p class="basic_anser">たけ</p>
-        </div>
-        <div class="basic_l_and_a">
-          <p class="basic_label">age</p>
-          <p class="basic_anser">23</p>
-        </div>
-        <div class="basic_l_and_a">
-          <p class="basic_label">blood type</p>
-          <p class="basic_anser">B</p>
-        </div>
-        <div class="basic_l_and_a">
-          <p class="basic_label">hometown</p>
-          <p class="basic_anser">名古屋</p>
-        </div>
+          <div class="Lifting">
+            <img src="./images/take.jpg" alt="take"/>
+          </div>
+          <div class="basic_l_and_a">
+            <p class="basic_label">Name</p>
+            <p class="basic_anser">たけ</p>
+          </div>
+          <div class="basic_l_and_a">
+            <p class="basic_label">age</p>
+            <p class="basic_anser">23</p>
+          </div>
+          <div class="basic_l_and_a">
+            <p class="basic_label">blood type</p>
+            <p class="basic_anser">B</p>
+          </div>
       </div>
     </section>
 
@@ -68,21 +66,25 @@
       <!-- <div id="background_fadein_right" class="fadein-before"> -->
       <!-- </div> -->
       <div id="background_fadein" class="fadein-before divspace">
-        <div class="basic_l_and_a_2">
-          <p class="basic_label">graduate school</p>
-          <p class="basic_anser">名古屋大学</p>
-        </div>
-        <div class="basic_l_and_a_2">
-          <p class="basic_label">department</p>
-          <p class="basic_anser">生命農学研究科</p>
-        </div>
-        <div class="basic_l_and_a_2">
-          <p class="basic_label">my study</p>
-          <p class="basic_anser">植物の体内時計</p>
-        </div>
-        <div class="plant">
-          <img src="./images/plant_circle.jpg" alt="植物"/>
-        </div>
+        <!-- <div class="divspace"> -->
+          <div class="basic_l_and_a_2">
+            <p class="basic_label">graduate school</p>
+            <p class="basic_anser">名古屋大学大学院</p>
+          </div>
+          <div class="basic_l_and_a_2">
+            <p class="basic_label">department</p>
+            <p class="basic_anser">生命農学研究科</p>
+          </div>
+        <!-- </div> -->
+        <!-- <div class="divspace"> -->
+          <div class="basic_l_and_a_2">
+            <p class="basic_label">my study</p>
+            <p class="basic_anser">植物の体内時計</p>
+          </div>
+          <div class="plant">
+            <img src="./images/plant_circle.jpg" alt="植物"/>
+          </div>
+        <!-- </div> --> 
       </div>
     </section>
 
@@ -91,22 +93,23 @@
         <h1 id="Favorite-thing">Favorite things</h1>
       </div>
       <div id="favorite_fadein" class="fadein-before divspace">
-        <div class="Lifting">
-          <img src="./images/Lifting-stop.png" alt="リフティングストップ" id="Liftingstop">
-          <img src="./gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
-        </div>
-        <div class="basic_l_and_a_3">
-            <p class="basic_label">spring & autumn</p>
-            <p class="basic_anser">リフディング</p>
-        </div>
-        <div class="basic_l_and_a_3">
-            <p class="basic_label">winter</p>
-            <p class="basic_anser">スノーボード</p>
-        </div>
-        <div class="basic_l_and_a_3">
-            <p class="basic_label">all season</p>
-            <p class="basic_anser">アニメ鑑賞</p>
-        </div>
+
+          <div class="Lifting">
+            <img src="./images/Lifting-stop.png" alt="リフティングストップ" id="Liftingstop">
+            <img src="./gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
+          </div>
+          <div class="basic_l_and_a_3">
+              <p class="basic_label">spring & autumn</p>
+              <p class="basic_anser">リフディング</p>
+          </div>
+            <div class="basic_l_and_a_3">
+              <p class="basic_label">winter</p>
+              <p class="basic_anser">スノーボード</p>
+          </div>
+          <div class="basic_l_and_a_3">
+              <p class="basic_label">all season</p>
+              <p class="basic_anser">アニメ鑑賞</p>
+           </div>
       </div>
     <section>
 
@@ -115,17 +118,10 @@
         <a href="https://www.instagram.com/nomu1524/" target="_blank" >
           <img src="./images/glyph-logo_May2016.png" alt="インスタロゴ" class="icon">
         </a>
-        <!-- アンカーで囲ったものがリンクになる target="_blank" は別ページで開く用-->
+
+        <p><small>&copy; 2022 Take</small></p>
       </div>
     </footer>
     <script src="main.js"></script>
   </body>
 </html>
-
-<!-- 
-紹介したcssのキーワード
-
-・margin,padding　余白に関するもの
-・ブロックレベル要素と、インライン要素(HTML要素の種類)
-・flexbox　html要素の位置をいじれる、レイアウト
-・position: 　通常と違う挙動を指定する -->
