ポートフォリオ調整

--- a/index.html
+++ b/index.html
@@ -22,101 +22,103 @@
   
 
   <body>      
-    <div id="home" class="big-bg">
-      <header class="page-header">
-        <h1>Take</h1>
-      </header>
-      <div>
-        <ul class="include-accordion scroll-control around-accordion" id="accordions">
-          <li id="BtnandUl">
-            <button class="accordionBtn" id="accordionBtn" type="button">Menu</button>
-            <ul class="main-nav" id="UlandLi">
-              <li class="menu"><a href="#Background">Basic Information</a></li>
-              <li class="menu"><a href="#Basic-infomation">Background</a></li>
-              <li class="menu"><a href="#Favorite-thing">Favorite things</a></li>
-            </ul>
-          </li>
+    <div class = "wrapper">
+      <div id="home" class="big-bg">
+        <header class="page-header">
+          <h1>Take</h1>
+        </header>
+        <div>
+          <ul class="include-accordion scroll-control around-accordion" id="accordions">
+            <li id="BtnandUl">
+              <button class="accordionBtn" id="accordionBtn" type="button">Menu</button>
+              <ul class="main-nav" id="UlandLi">
+                <li class="menu"><a href="#Background">Basic Information</a></li>
+                <li class="menu"><a href="#Basic-infomation">Background</a></li>
+                <li class="menu"><a href="#Favorite-thing">Favorite things</a></li>
+              </ul>
+            </li>
+        </div>
       </div>
-    </div>
-
-    <section>
-      <div class="titlespace">
-        <h1 id="Basic-infomation">Basic Information</h1>
-      </div>
-      <div id="basic_fadein" class="fadein-before divspace">
-          <div class="Lifting">
-            <img src="./images/take2.jpg" alt="take"/>
-          </div>
-          <div class="basic_l_and_a">
-            <p class="basic_label">Name</p>
-            <p class="basic_anser">たけ</p>
-          </div>
-          <div class="basic_l_and_a">
-            <p class="basic_label">age</p>
-            <p class="basic_anser">23</p>
-          </div>
-          <div class="basic_l_and_a">
-            <p class="basic_label">blood type</p>
-            <p class="basic_anser">B</p>
-          </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="titlespace_other">
-        <h1 id="Background">Background</h1>
-      </div>
-      <div id="background_fadein" class="fadein-before divspace">
-          <div class="basic_l_and_a_2">
-            <p class="basic_label">graduate school</p>
-            <p class="basic_anser">名古屋大学大学院</p>
-          </div>
-          <div class="basic_l_and_a_2">
-            <p class="basic_label">University</p>
-            <p class="basic_anser">名城大学</p>
-          </div>
-          <div class="basic_l_and_a_2">
-            <p class="basic_label">my study</p>
-            <p class="basic_anser">植物の体内時計</p>
-          </div>
-          <div class="plant">
-            <img src="./images/plant_circle.jpg" alt="植物"/>
-          </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="titlespace_other">
-        <h1 id="Favorite-thing">Favorite things</h1>
-      </div>
-      <div id="favorite_fadein" class="fadein-before divspace">
-          <div class="Lifting">
-            <img src="./images/Lifting-stop.png" alt="リフティングストップ" id="Liftingstop">
-            <img src="./gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
-          </div>
-          <div class="basic_l_and_a_3">
-              <p class="basic_label">spring & autumn</p>
-              <p class="basic_anser">リフディング</p>
-          </div>
+  
+      <section>
+        <div class="titlespace">
+          <h1 id="Basic-infomation">Basic Information</h1>
+        </div>
+        <div id="basic_fadein" class="fadein-before divspace">
+            <div class="Lifting">
+              <img src="./images/take2.jpg" alt="take"/>
+            </div>
+            <div class="basic_l_and_a">
+              <p class="basic_label">Name</p>
+              <p class="basic_anser">たけ</p>
+            </div>
+            <div class="basic_l_and_a">
+              <p class="basic_label">age</p>
+              <p class="basic_anser">23</p>
+            </div>
+            <div class="basic_l_and_a">
+              <p class="basic_label">blood type</p>
+              <p class="basic_anser">B</p>
+            </div>
+        </div>
+      </section>
+  
+      <section>
+        <div class="titlespace_other">
+          <h1 id="Background">Background</h1>
+        </div>
+        <div id="background_fadein" class="fadein-before divspace">
+            <div class="basic_l_and_a_2">
+              <p class="basic_label">graduate school</p>
+              <p class="basic_anser">名古屋大学大学院</p>
+            </div>
+            <div class="basic_l_and_a_2">
+              <p class="basic_label">University</p>
+              <p class="basic_anser">名城大学</p>
+            </div>
+            <div class="basic_l_and_a_2">
+              <p class="basic_label">my study</p>
+              <p class="basic_anser">植物の体内時計</p>
+            </div>
+            <div class="plant">
+              <img src="./images/plant_circle.jpg" alt="植物"/>
+            </div>
+        </div>
+      </section>
+  
+      <section>
+        <div class="titlespace_other">
+          <h1 id="Favorite-thing">Favorite things</h1>
+        </div>
+        <div id="favorite_fadein" class="fadein-before divspace">
+            <div class="Lifting">
+              <img src="./images/Lifting-stop.png" alt="リフティングストップ" id="Liftingstop">
+              <img src="./gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
+            </div>
             <div class="basic_l_and_a_3">
-              <p class="basic_label">winter</p>
-              <p class="basic_anser">スノーボード</p>
-          </div>
-          <div class="basic_l_and_a_3">
-              <p class="basic_label">all season</p>
-              <p class="basic_anser">アニメ鑑賞</p>
-           </div>
-      </div>
-    <section>
-
-    <footer>
-      <div class="FFF">
-        <a href="https://www.instagram.com/nomu1524/" target="_blank" >
-          <img src="./images/glyph-logo_May2016.png" alt="インスタロゴ" class="icon">
-        </a>
-        <p><small>&copy; 2022 Take</small></p>
-      </div>
-    </footer>
-    <script src="main.js"></script>
+                <p class="basic_label">spring & autumn</p>
+                <p class="basic_anser">リフディング</p>
+            </div>
+              <div class="basic_l_and_a_3">
+                <p class="basic_label">winter</p>
+                <p class="basic_anser">スノーボード</p>
+            </div>
+            <div class="basic_l_and_a_3">
+                <p class="basic_label">all season</p>
+                <p class="basic_anser">アニメ鑑賞</p>
+             </div>
+        </div>
+      <section>
+  
+      <footer>
+        <div class="FFF">
+          <a href="https://www.instagram.com/nomu1524/" target="_blank" >
+            <img src="./images/glyph-logo_May2016.png" alt="インスタロゴ" class="icon">
+          </a>
+          <p><small>&copy; 2022 Take</small></p>
+        </div>
+      </footer>
+      <script src="main.js"></script>
+    </div>
   </body>
 </html>
