--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
               <img src="./gif/Lifting.gif" alt="Lifting" id="Liftingstrat" class="removepicture"/>
             </div>
             <div class="basic_l_and_a_3">
-                <p class="basic_label">spring & autumn</p>
+                <p class="basic_label">sports</p>
                 <p class="basic_anser">リフディング</p>
             </div>
               <div class="basic_l_and_a_3">
-                <p class="basic_label">winter</p>
-                <p class="basic_anser">スノーボード</p>
+                <p class="basic_label">indoor</p>
+                <p class="basic_anser">アニメ鑑賞</p>
             </div>
             <div class="basic_l_and_a_3">
-                <p class="basic_label">all season</p>
-                <p class="basic_anser">アニメ鑑賞</p>
+                <p class="basic_label">others</p>
+                <p class="basic_anser">カラオケ</p>
              </div>
         </div>
       <section>
